app/assets/stylesheets/zammad.scss
/* ... */
// dark mode
[data-theme='dark'] {
  --button-action-color: hsl(0, 0%, 80%);
  --button-background: hsla(0, 0%, 100%, 0.03);
  --button-background-active: hsla(0, 0%, 100%, 0.015);
  --button-active: hsla(0, 0%, 100%, 0.1);
  --button-active-active: hsla(0, 0%, 100%, 0.08);
  --header-primary: white;
  --header-secondary: hsl(198, 5%, 73%);
  --text-normal: hsl(205, 1%, 86%);
  --text-muted: hsl(213, 3%, 60%);
  --text-muted-alt: hsl(213, 8%, 61%);
  --text-link: hsl(202, 72%, 50%);
  --text-nav: hsl(205, 1%, 84%);
  --nav-icon: hsl(0, 0%, 50%);
  --highlight: hsl(205, 90%, 60%);
  --interactive-primary: white;
  --interactive-muted: hsl(213, 3%, 64%);
  --interactive-muted-active: hsl(213, 3%, 35%);
  --interactive-muted-alt: hsl(209, 5%, 35%);
  --interactive-muted-alt-selected: hsl(205, 4%, 75%);
  --background-primary: hsl(230, 5%, 19%);
  --background-primary-alt: hsl(230, 5%, 21%);
  --background-secondary: hsl(230, 5%, 23%);
  --background-secondary-hover: hsl(230, 5%, 20%);
  --background-tertiary: hsl(230, 7%, 17%);
  --background-quaternary: hsl(230, 7%, 13%);
  --background-quaternary-alt: hsl(230, 4%, 30%);
  --background-popover: hsl(216, 3%, 30%);
  --background-active: var(--highlight);
  --background-highlight: hsl(205, 30%, 27%);
  --background-article-meta: hsl(230, 7%, 25%);
  --background-article-customer: hsl(218, 8%, 32%);
  --background-article-customer-meta: hsl(218, 6%, 30%);
  --background-modifier-accent: hsla(0, 0%, 0%, 0.12);
  --background-modifier-accent-light: hsla(0, 0%, 0%, 0.06);
  --background-modifier-accent-dark: hsla(0, 0%, 0%, 0.3);
  --background-modifier-lighter: hsla(0, 0%, 100%, 0.08);
  --background-modifier-border: hsla(0, 0%, 0%, 0.17);
  --background-modifier-hover: hsla(230, 5%, 36%, 0.4);
  --backdrop-clue-start: hsla(202, 68%, 54%, 0.1);
  --backdrop-clue-end: hsla(202, 68%, 54%, 0.9);
  --border: hsl(230, 4%, 17%);
  --border-alt: hsl(230, 7%, 18%);
  --border-highlight: hsl(205, 70%, 50%);
  --border-internal: hsl(18, 30%, 39%);
  --border-internal-stripe: hsl(18, 30%, 30%);
  --border-article-customer: hsl(209, 6%, 30%);
  --border-article-customer-selected: hsl(199, 10%, 33%);
  --shadow-highlight: hsl(205, 42%, 36%);
  --supergood-color: hsl(145, 51%, 45%);
  --good-color: hsl(62, 45%, 46%);
  --ok-color: hsl(41, 100%, 49%);
  --bad-color: hsl(30, 93%, 50%);
  --superbad-color: hsl(19, 90%, 51%);
  --ghost-color: hsl(0, 0%, 50%);
  --danger-color: hsl(0, 82%, 59%);
  --pending-color: hsl(205, 1%, 44%);
  --elevation-stroke: 0 1px hsla(0, 0%, 0%, 0.13);
  --elevation-low: 0 1px 5px hsla(0, 0%, 0%, 0.15);
  --elevation-high: 0 1px 14px hsla(0, 0%, 0%, 0.25);
  --highlighter-yellow: hsl(48, 34%, 30%);
  --highlighter-green: hsl(105, 34%, 27%);
  --highlighter-blue: hsl(207, 41%, 30%);
  --highlighter-pink: hsl(338, 28%, 30%);
  --highlighter-purple: hsl(288, 22%, 36%);
  --file-icon-background: hsl(216, 5%, 77%);
  --file-icon-color: hsl(230, 7%, 21%);
  --tag-text: var(--text-normal);
  --tag-background: hsl(230, 5%, 32%);
  --table-border: hsl(0, 0%, 72%);
  --table-header-background: hsla(0, 0%, 0%, 0.2);
}

@mixin dark {
  [data-theme='dark'] & {
    @content;
  }
}

@mixin desktop {
  @media screen and (min-width: 1260px) {
    @content;
  }
}

@mixin small-desktop {
  @media screen and (max-width: 1260px) {
    @content;
  }
}

@mixin tablet {
  @media screen and (min-width: 768px) {
    @content;
  }
}

@mixin phone {
  #app.navigation-collapsed & {
    @content;
  }

  @media screen and (max-width: 767px) {
    @content;
  }
}

/* sets LTR and RTL within the same style call */
@mixin bidi-style($prop, $value, $inverse-prop, $default-value) {
  #{$prop}: $value;

  html[dir='rtl'] & {
    #{$inverse-prop}: $value;
    #{$prop}: $default-value;
  }
}

/* adds a property only in RTL */
@mixin rtl($prop, $value) {
  html[dir='rtl'] & {
    #{$prop}: $value;
  }
}

/* adds a property only in LTR */
@mixin ltr($prop, $value) {
  html[dir='ltr'] & {
    #{$prop}: $value;
  }
}

%clickable {
  cursor: pointer;
  user-select: none;
  touch-action: manipulation;
}

html {
  height: 100%;
}

body {
  font-family: 'Fira Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: normal;
  font-variant-ligatures: none;
  line-height: 1.45;
  background: var(--background-primary);
  height: 100%;
  color: var(--text-normal);
  overflow-wrap: break-word;
  overflow-wrap: break-word;
  display: flex;
  flex-direction: column;
}

/* prevent clickable <use xlink:href="#icon-abc"></use> */
use {
  pointer-events: none;
}

p {
  margin: 12px 0;

  &.subtle {
    color: var(--text-muted);
  }

  &.description {
    color: var(--text-muted);
  }
}

h3 + .description {
  margin-top: 0;
}

strong {
  font-weight: 500;
}

hr {
  border-top-color: var(--background-modifier-border);
}

.inherit-color {
  color: inherit;
}

.text-normal {
  color: var(--text-normal);
}

.text-muted {
  color: var(--text-muted);
}

.text-placeholder {
  color: var(--interactive-muted);
}

.text-small {
  font-size: 12px;
}

.u-highlight {
  color: var(--text-link);
}

.u-dontfold {
  flex-shrink: 0;
}

.u-invisible {
  opacity: 0;
  pointer-events: none;
  position: absolute !important;
}

[data-dir='ltr'] {
  direction: ltr;
}

[data-dir='rtl'] {
  direction: rtl;
}

a {
  outline: none !important;

  @extend .u-highlight;

  &.is-disabled,
  &[disabled] {
    pointer-events: none;
    cursor: not-allowed !important;
    opacity: 0.33;
  }

  & > s {
    color: var(--text-muted);
  }
}

a.create {
  color: hsl(145, 51%, 45%);
  text-decoration: underline;
}

small {
  color: var(--text-muted);
  font-size: 12px;
}

blockquote {
  font-size: inherit;
}

ol,
ul {
  padding-inline-start: 20px;
}

#app {
  display: flex;
  flex: 1;
  min-width: $minWidth;
  overflow: auto;
  -webkit-overflow-scrolling: touch;

  @include phone {
    min-width: auto;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }
}
/* ... */

